# fmri-bids-recon

./: .gitignore  AID_LOG.md  INPUT_SPECIFICATION.md  README.md  environment.yml  pyproject.toml
.aid/: project_claude.md
.aid/reports/: fmri-bids-recon_brainstorm_20260714_142126.md  fmri-bids-recon_brainstorm_20260717_123003.md  fmri-bids-recon_brainstorm_20260724_120000.md  fmri-bids-recon_cr_20260717_113514.md  fmri-bids-recon_cr_20260721_183128.md  fmri-bids-recon_document_20260722_125128.md  fmri-bids-recon_document_20260722_144046.md  fmri-bids-recon_document_20260722_204500.md  fmri-bids-recon_document_20260724_140000.md  fmri-bids-recon_implement_build_20260714_195734.md  fmri-bids-recon_implement_build_20260715_083741.md  fmri-bids-recon_implement_build_20260715_123948.md  fmri-bids-recon_implement_build_20260715_152556.md  fmri-bids-recon_implement_build_20260715_185918.md  fmri-bids-recon_implement_build_20260715_193946.md  fmri-bids-recon_implement_build_20260716_101352.md  fmri-bids-recon_implement_build_20260716_180000.md  fmri-bids-recon_implement_build_20260717_130057.md  fmri-bids-recon_implement_build_20260717_195412.md  fmri-bids-recon_implement_build_20260721_141200.md  fmri-bids-recon_implement_build_20260722_123349.md  (+31 more)
config/: study.example.yaml
fmri_bids_recon/: __main__.py  config.py  deface.py  errors.py  json_intermediate.py  labels.py  manifest.py  physio.py  report.py  runs.py  sidecar.py  stage1_convert.py  stage2_classify.py  stage3_map.py  stage4_assemble.py  stage5_render.py  stage6_validate.py  tsv.py  versions.py
